objects/vlocity_ins__AssetPartyRelationship__c.object
<CustomObject>
    <description>Relationships to parties with a role on a held product (asset).  For example, policyholder, beneficiary, producer, account holder or authorized user.</description>
    <fields>
        <fullName>Role__c</fullName>
        <formula>vlocity_ins__PartyRelationshipTypeId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AssetId__c</fullName>
        <description>The parent held product, such as a policy or financial account.</description>
        <label>Held Product</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Held Product Relationships</relationshipLabel>
        <relationshipName>AssetPartyRels</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AttributeSelectedValues__c</fullName>
        <label>Attribute Selected Values</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__BeneficiaryPercentage__c</fullName>
        <description>For beneficiary relationships, the percentage of the total value to be paid to this beneficiary.</description>
        <label>Beneficiary Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CommissionPercentage__c</fullName>
        <description>For producer relationships, the percentage of the commission that will be paid to this producer.</description>
        <label>Commission Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FeeAmount__c</fullName>
        <description>Calculated fee on the party relationship.</description>
        <label>Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ImageId__c</fullName>
        <formula>vlocity_ins__InsuredPartySpecId__r.vlocity_ins__ImageId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image &amp; Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InsuredPartyNumber__c</fullName>
        <label>Insured Party Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InsuredPartySpecId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Insured Party Spec Id</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Held Product Relationships</relationshipLabel>
        <relationshipName>HeldProductRelationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsPolicyholder__c</fullName>
        <description>Indicates if party is the policyholder</description>
        <formula>vlocity_ins__PartyId__r.vlocity_ins__AccountId__c == vlocity_ins__AssetId__r.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Policyholder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LookupKey__c</fullName>
        <formula>vlocity_ins__InsuredPartyNumber__c + &apos;_&apos; + vlocity_ins__AssetId__r.SerialNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lookup Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MembershipNumber__c</fullName>
        <description>Subscriber Id stamped on health insurance member Id card.</description>
        <label>Membership Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PartyAccountBillingCity__c</fullName>
        <description>Billing City of Account associated with Party</description>
        <formula>vlocity_ins__PartyId__r.vlocity_ins__AccountId__r.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Party Account Billing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PartyAccountBillingCountry__c</fullName>
        <description>Billing Country of Account associated with Party</description>
        <formula>vlocity_ins__PartyId__r.vlocity_ins__AccountId__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Party Account Billing Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PartyAccountBillingPostalCode__c</fullName>
        <description>Billing Postal Code of Account associated with Party</description>
        <formula>vlocity_ins__PartyId__r.vlocity_ins__AccountId__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Party Account Billing Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PartyAccountBillingState__c</fullName>
        <description>Billing State of Account associated with Party</description>
        <formula>vlocity_ins__PartyId__r.vlocity_ins__AccountId__r.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Party Account Billing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PartyAccountBillingStreet__c</fullName>
        <description>Billing Street of Account associated with Party</description>
        <formula>vlocity_ins__PartyId__r.vlocity_ins__AccountId__r.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Party Account Billing Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PartyAccountCalculatedAddress__c</fullName>
        <description>Calculated Address of Account associated with Party</description>
        <formula>vlocity_ins__PartyId__r.vlocity_ins__AccountId__r.vlocity_ins__CalculatedAddress__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Party Account CalculatedAddress__c</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PartyAccountEmail__c</fullName>
        <description>Email of Account associated with Party</description>
        <formula>vlocity_ins__PartyId__r.vlocity_ins__AccountId__r.vlocity_ins__Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Party Account Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PartyAccountId__c</fullName>
        <description>Formula: the account id for a party of type account.</description>
        <formula>CASESAFEID(vlocity_ins__PartyId__r.vlocity_ins__AccountId__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PartyAccountName__c</fullName>
        <description>Name of Account associated with Party</description>
        <formula>vlocity_ins__PartyId__r.vlocity_ins__AccountId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Party Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PartyAccountPhone__c</fullName>
        <description>Phone of Account associated with Party</description>
        <formula>vlocity_ins__PartyId__r.vlocity_ins__AccountId__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Party Account Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PartyContactId__c</fullName>
        <description>Formula: the contact id for a party of type contact.</description>
        <formula>CASESAFEID(vlocity_ins__PartyId__r.vlocity_ins__ContactId__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PartyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Id of the related party.</description>
        <label>Party</label>
        <referenceTo>vlocity_ins__Party__c</referenceTo>
        <relationshipName>AssetPartyRels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PartyLink__c</fullName>
        <description>Formula: a hyperlink to the detail page for the related party based on the type of party.</description>
        <formula>IF( ISBLANK(vlocity_ins__PartyId__r.vlocity_ins__AccountId__r.Id), HYPERLINK(&quot;/&quot; &amp; vlocity_ins__PartyId__r.vlocity_ins__ContactId__r.Id, vlocity_ins__PartyId__r.Name  , &quot;_parent&quot;), HYPERLINK(&quot;/&quot; &amp; vlocity_ins__PartyId__r.vlocity_ins__AccountId__r.Id, vlocity_ins__PartyId__r.Name , &quot;_parent&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Party</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PartyRelationshipTypeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The relationship type, or role, for this relationship.</description>
        <label>Relationship Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>vlocity_ins__PartyRelationshipType__c.vlocity_ins__SourcePartyType__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>vlocity_ins__PartyRelationshipType__c</referenceTo>
        <relationshipLabel>Held Product Relationships</relationshipLabel>
        <relationshipName>AssetPartyRels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PartyRelationshipTypeName__c</fullName>
        <description>The name of the relationship type, or role, for this relationship.</description>
        <formula>vlocity_ins__PartyRelationshipTypeId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relationship Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PremiumAmount__c</fullName>
        <label>Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProRatedPremiumAmount__c</fullName>
        <description>Prorated amount of premium base on the remaining days of the modified Party Relationship</description>
        <label>Prorated Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductionCodeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the credited production code.</description>
        <label>Production Code</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>vlocity_ins__ProductionCode__c.vlocity_ins__IsWritingCode__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>vlocity_ins__ProductionCode__c</referenceTo>
        <relationshipLabel>Held Product Relationships</relationshipLabel>
        <relationshipName>HeldProductRelationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProratedFeeAmount__c</fullName>
        <description>Prorated amount of fee based on the remaining days of the modified party relationship.</description>
        <label>Prorated Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProratedTaxAmount__c</fullName>
        <description>Prorated amount of tax based on the remaining days of the modified party relationship.</description>
        <label>Prorated Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RecordTypeName__c</fullName>
        <formula>vlocity_ins__InsuredPartySpecId__r.vlocity_ins__RecordTypeName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RelationshipToInsured__c</fullName>
        <description>Text description of the relationship of this party to the insured such as spouse or child.</description>
        <label>Relationship to Insured</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TaxAmount__c</fullName>
        <description>Calculated tax on the party relationship.</description>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalAmount__c</fullName>
        <description>Total taxes, fees, and price for the party relationship.</description>
        <formula>vlocity_ins__TaxAmount__c + vlocity_ins__FeeAmount__c + vlocity_ins__PremiumAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalProratedAmount__c</fullName>
        <description>Total prorated taxes, fees, and price for the party relationship.</description>
        <formula>vlocity_ins__ProratedTaxAmount__c + vlocity_ins__ProratedFeeAmount__c + vlocity_ins__ProRatedPremiumAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Prorated Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalSumInsured__c</fullName>
        <label>Total Sum Insured</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Held Product Relationship</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Held Product Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>